--- a/main.css
+++ b/main.css
@@ -2703,7 +2703,7 @@ input, select, textarea {
 			opacity: 0.25;
 		}
 
-/* Main BG */
+/* icons-gridBG */
 
 	.main-bg {
 		-moz-transition: opacity 0.5s ease-out;
